small fix to Makefile

--- a/src/Makefile
+++ b/src/Makefile
@@ -41,7 +41,7 @@ BUNDLER_OBJS=BaseApp.o BundlerApp.o keys.o Register.o Epipolar.o	\
 
 BUNDLER_LIBS=-limage -lsfmdrv -lsba.v1.5 -lmatrix -lz -lblas -llapack \
 	-lcblas -lminpack -lm -l5point -ljpeg -lANN_char -lgfortran
-CERES_LIBS= -lceres -lgomp -lglog -lcholmod
+CERES_LIBS= -lceres -lgomp -lglog -lcholmod -lpthread
 
 # if we are using Ceres, add to options
 ifdef USE_CERES
