fixing compiler warning

--- a/src/Makefile
+++ b/src/Makefile
@@ -4,7 +4,7 @@ USE_CERES=true
 
 CC=gcc
 CXX=g++
-OPTFLAGS=-O3 -Wall
+OPTFLAGS=-O3 -Wall -Wno-unused-result
 OTHERFLAGS=-std=gnu++0x
 
 OS=$(shell uname -o)
