fixing Makefile for Ceres compilation

--- a/src/Makefile
+++ b/src/Makefile
@@ -4,7 +4,8 @@ USE_CERES=true
 
 CC=gcc
 CXX=g++
-OPTFLAGS=-O3 -Wall -Wno-unused-result
+# OPTFLAGS=-O3 -Wall -Wno-unused-result
+OPTFLAGS=-g2
 OTHERFLAGS=-std=gnu++0x
 
 OS=$(shell uname -o)
@@ -39,17 +40,24 @@ BUNDLER_OBJS=BaseApp.o BundlerApp.o keys.o Register.o Epipolar.o	\
 	BundleIO.o ProcessBundle.o BundleTwo.o Decompose.o		\
 	RelativePose.o Distortion.o TwoFrameModel.o LoadJPEG.o
 
-BUNDLER_LIBS=-limage -lsfmdrv -lsba.v1.5 -lmatrix -lz -lblas -llapack \
+BUNDLER_BASE_LIBS=-limage -lsfmdrv -lsba.v1.5 -lmatrix -lz -llapack -lblas \
 	-lcblas -lminpack -lm -l5point -ljpeg -lANN_char -lgfortran
-CERES_LIBS= -lceres -lcholmod -lcolamd -lamd -lcamd -lcxsparse \
+CERES_LIBS=-lceres -lcholmod -lcolamd -lamd -lcamd -lcxsparse \
 	-lsuitesparseconfig -lgomp -lglog -lpthread
 
 # if we are using Ceres, add to options
 ifeq ($(USE_CERES),true)
+# Edit these two variables as needed
+CERES_INCLUDE_PATH=
+CERES_LIB_PATH=
 BUNDLER_DEFINES+=-D__USE_CERES__
-BUNDLER_LIBS+=$(CERES_LIBS)
+BUNDLER_LIBS=$(CERES_LIBS) $(BUNDLER_BASE_LIBS)
 BUNDLER_OBJS+=BundleCeres.o
-INCLUDE_PATH+=-I/usr/include/eigen3
+INCLUDE_PATH+=$(CERES_INCLUDE_PATH)
+LIB_PATH+=$(CERES_LIB_PATH)
+# INCLUDE_PATH+=-I/usr/include/eigen3
+else
+BUNDLER_LIBS=$(BUNDLER_BASE_LIBS)
 endif
 
 CPPFLAGS=$(OPTFLAGS) $(OTHERFLAGS) $(INCLUDE_PATH)
