Changing Makefile to compile using optimization flags by default

--- a/src/Makefile
+++ b/src/Makefile
@@ -4,8 +4,8 @@ USE_CERES=true
 
 CC=gcc
 CXX=g++
-# OPTFLAGS=-O3 -Wall -Wno-unused-result
-OPTFLAGS=-g2
+OPTFLAGS=-O3 -Wall -Wno-unused-result
+# OPTFLAGS=-g2
 OTHERFLAGS=-std=gnu++0x
 
 OS=$(shell uname -o)
